Update homepage URL and deployment scripts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://github.com/NewViewNewBeginning/react-flight-app",
+	"homepage": "https://NewViewNewBeginning.github.io/react-flight-app",
 	"name": "react-flight",
 	"version": "0.1.0",
 	"private": true,
